# The-Agent-Tina-ETHGlobal

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  agentarena_client.py  merge_analysis.md  pyproject.toml  server.py  test_audit_output.json  test_integration.py
agent/: config.py  local.py  main.py  server.py  types.py
agent/models/: solidity_file.py
agent/services/: auditor.py  models.py  router.py
agent/services/prompts/: access_control_prompt.py  audit_prompt.py  flash_loan_prompt.py  reentrancy_prompt.py
agent/services/strategies/: __init__.py  access_control_strategy.py  base_strategy.py  flash_loan_strategy.py  general_strategy.py  reentrancy_strategy.py
agent/services/utils/: __init__.py  finding_merger.py
