[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -------------------------------------
# Project Metadata
# -------------------------------------
[project]
name = "agent-tina"
version = "0.1.0"
description = "The Agent Tina – AI-powered multi-strategy Solidity audit agent"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

# Dependencies for running the audit agent
dependencies = [
    "fastapi>=0.95.0",           # Webhook server for AgentArena integration
    "uvicorn>=0.21.1",           # ASGI server
    "httpx>=0.24.0",             # HTTP client for OpenAI + GitHub calls
    "pydantic>=1.10.7",          # Data models + validation
    "pydantic_settings>=2.0.0",  # .env config loader
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "gitpython>=3.1.31",
    "questionary>=2.0.1",
]

# Console command: `audit-agent`
[project.scripts]
audit-agent = "agent.main:main"

# -------------------------------------
# Build Configuration
# -------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["agent"]

# -------------------------------------
# Code Quality
# -------------------------------------
[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I"]

# -------------------------------------
# Testing
# -------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

